--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ console.log(location.href)
  <div class="flex-container">
  <button onclick="Dark()" id="dark">Dark Theme🌙</button>
  <button onclick="Day()" id="reset">Light Theme ☀️</button>
- <a href="/Users/Surendar/Desktop/SANOJ%20FILES/Theme%20Changer/subprocess.html"><button>RESET</button></a>
+ <a href="/subprocess.html"><button>RESET</button></a>
  <hr>
  </div>
  <h1>Choose Your Theme</h1>
